<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Was Here</string>

    <string name="login_error_message">Failed to login.</string>
    <string name="login_success_message">Login successful!</string>
    <string name="register_error_message">Failed to create new account.</string>
    <string name="register_success_message">Created a new account!</string>

    <string name="forgot_password">Forgot password ?</string>
    <string name="remember_me">remember me</string>
    <string name="login">Sign In</string>
    <string name="sign_up">New User</string>
    <string name="e_mail_hint">e-mail</string>
    <string name="password_hint">Please enter your password</string>
    <string name="or">or</string>
    <string name="google_account_login">Continue with your Google account</string>

    <string name="create_new_account">Sign Up</string>
    <string name="user_name_hint">user name</string>
    <string name="create_password_hint">password</string>
    <string name="again_password_hint">re-enter password</string>

    <string name="update_marker_list">Update Markers</string>
    <string name="playSound">Play Sample Sound</string>
    <string name="recordSound">Record Something!</string>
    <string name="editTextWasTitle_hint">title</string>
    <string name="empty_title">no title…</string>
    <string name="uploading">Uploading please wait…</string>
    <string name="upload_successful">Upload successful!</string>


    <string name="discard_recording">Cancel</string>
    <string name="retake_recording">Retry</string>
    <string name="send_recording">Send</string>

    <string name="file_directory_01">/storage/emulated/0/VoiceRecorder/my_sounds/tekerleme01.3gp</string>
    <string name="file_name_01">tekerleme01.3gp</string>
    <string name="default_file_name">was_recording</string>

    <string name="audio_extension">mp3</string>
    <string name="audio_child">audio/</string>

</resources>
