<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B52E2E2E"
    tools:context=".Views.Activities.New_User_Activity.NewUserActivity">

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSelectUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/editTextSelectUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateAccount" />

    <EditText
        android:id="@+id/editTextSelectEMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextSelectUserName"
        app:layout_constraintStart_toStartOf="@+id/editTextSelectUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextSelectUserName" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSelectEMail"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/sym_action_email" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSelectPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <EditText
        android:id="@+id/editTextSelectPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/create_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextSelectEMail"
        app:layout_constraintStart_toStartOf="@+id/editTextSelectEMail"
        app:layout_constraintTop_toBottomOf="@+id/editTextSelectEMail" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextReEnterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <EditText
        android:id="@+id/editTextReEnterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/again_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextSelectPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextSelectPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSelectPassword" />

    <Button
        android:id="@+id/buttonCreateNewAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReEnterPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>