<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTintMode="add"
    android:paddingStart="@dimen/margin_paddings_tiny"
    android:paddingEnd="@dimen/margin_paddings_tiny"
   >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldInputLayoutCreateUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        style="@style/NoAllCapsTextApperance"
        android:textColorHint="@color/primaryHintColor"
        app:hintTextAppearance="@style/HintTextApperance"
       >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCreateUserName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:alpha="80"

            android:backgroundTint="@color/primaryLightColor"
            android:drawableStart="@drawable/icon_new_user"
            android:drawablePadding="@dimen/margin_paddings_tiny"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/user_name_hint"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/secondaryColor"
            android:textColorHint="@color/primaryHintColor"
            android:textColorLink="@color/primaryColor"
            android:textCursorDrawable="@color/primaryColor"
            android:theme="@style/HintTextApperance" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldInputLayoutCreateEMail"
        style="@style/NoAllCapsTextApperance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondaryColor"
        android:textColorHint="@color/primaryHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextAppearance="@style/HintTextApperance"
        app:layout_constraintTop_toBottomOf="@+id/textFieldInputLayoutCreateUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCreateEMail"
            style="@style/NoAllCapsTextApperance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:alpha="80"
            android:backgroundTint="@color/primaryLightColor"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="@dimen/margin_paddings_tiny"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/e_mail_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/secondaryColor"
            android:textColorHint="@color/primaryHintColor"
            android:textColorLink="@color/primaryColor"
            android:textCursorDrawable="@color/primaryColor"
            android:theme="@style/HintTextApperance" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldInputLayoutCreatePassword"
        style="@style/NoAllCapsTextApperance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/primaryHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextAppearance="@style/HintTextApperance"
        app:layout_constraintTop_toBottomOf="@+id/textFieldInputLayoutCreateEMail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCreatePassword"
            style="@style/NoAllCapsTextApperance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:alpha="80"
            android:backgroundTint="@color/primaryLightColor"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="@dimen/margin_paddings_tiny"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/create_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/secondaryColor"
            android:textColorHint="@color/primaryHintColor"
            android:textColorLink="@color/primaryColor"
            android:textCursorDrawable="@color/primaryColor"
            android:theme="@style/HintTextApperance"
            app:hintTextAppearance="@style/HintTextApperance" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldInputLayoutRepeatPassword"

        style="@style/NoAllCapsTextApperance"
        android:textColorHint="@color/primaryHintColor"
        app:hintTextAppearance="@style/HintTextApperance"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldInputLayoutCreatePassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextReEnterPassword"
            style="@style/NoAllCapsTextApperance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:alpha="80"
            android:backgroundTint="@color/primaryLightColor"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="@dimen/margin_paddings_tiny"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/again_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/secondaryColor"
            android:textColorHint="@color/primaryHintColor"
            android:textColorLink="@color/primaryColor"
            android:textCursorDrawable="@color/primaryColor"
            android:theme="@style/HintTextApperance" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonSignUp"
        style="@style/NoAllCapsTextApperance"
        android:text="@string/create_new_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:fontFamily="@font/raleway_medium"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor"
        android:textColorHint="@color/primaryHintColor"
        app:backgroundTint="@color/primaryColor"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldInputLayoutRepeatPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>